--- a/app/.env.example
+++ b/app/.env.example
@@ -1,1 +1,3 @@
-DATABASE_URL=postgresql+psycopg://postgres:root@localhost:5432/examen_ed
+DATABASE_URL=postgresql+psycopg://user:password@server:port/db
+MINIO_ACCESS_KEY=''
+MINIO_SECRET_KEY=''
