--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,34 @@
-version: '3.9'
+version: '3.8'
 
 services:
   db:
-    image: postgres:16
-    restart: always
+    image: postgres:15
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: examen_ed
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: examen_db
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
 
   minio:
-    image: minio/minio:latest
-    restart: always
+    image: minio/minio
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
-    command: server /data --console-address ":9001"
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+    command: server /data
     ports:
       - "9000:9000"
-      - "9001:9001"
     volumes:
       - minio_data:/data
 
-  eltfire:
+  app:
     build:
-      context: ./app/commands/eltfire
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: Dockerfile.eltfire
     environment:
-      DATABASE_URL: postgresql+psycopg2://postgres:postgres@db:5432/examen_ed
+      DATABASE_URL: postgresql+psycopg://user:password@db:5432/examen_db
       MINIO_ENDPOINT: minio:9000
       MINIO_ACCESS_KEY: minioadmin
       MINIO_SECRET_KEY: minioadmin
@@ -39,19 +36,9 @@ services:
     depends_on:
       - db
       - minio
-    volumes:
-      - ./app/data:/app/app/data
-
-  init_db:
-    build:
-      context: ./app/commands/init_db
-      dockerfile: Dockerfile
-    environment:
-      DATABASE_URL: postgresql+psycopg2://postgres:postgres@db:5432/examen_ed
-    depends_on:
-      - db
-    entrypoint: ["init-db"]
+    ports:
+      - "8000:8000"
 
 volumes:
-  pgdata:
+  db_data:
   minio_data:
